--- a/src/scss/modules/slide.scss
+++ b/src/scss/modules/slide.scss
@@ -80,4 +80,8 @@
     padding: var(--padding-md) 0;
     border-top: var(--border-thickness) solid var(--fade-dark-md);
   }
+
+  ~ .sc-overlay {
+    z-index: 10100;
+  }
 }
